--- a/Salarios.ipynb
+++ b/Salarios.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1kAVDHMOn4P3K2adxo5VMdSn2i-ElpgZ6",
-      "authorship_tag": "ABX9TyOPX/25kq2C2F+F4lt1/vyG",
+      "authorship_tag": "ABX9TyMBoksXNGHLOB3bqLB7QmCj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,10 @@
       "source": [
         "path = \"/content/drive/MyDrive/Projetos Machine Learning/Projeto 1 - Previsão de Salários\"\n",
         " \n",
-        "df = pd.read_csv(path + '/Salary.csv')"
+        "df = pd.read_csv(path + '/Salary.csv')\n",
+        "\n",
+        "# Quem quiser baixar esse dataset o link é este:\n",
+        "# https://www.kaggle.com/datasets/rsadiq/salary"
       ],
       "metadata": {
         "id": "lDRMGX41pRo8"
